<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="c3e-YE-c3D">
    <device id="retina5_9" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Chat View Controller-->
        <scene sceneID="DpP-K7-ERi">
            <objects>
                <viewController storyboardIdentifier="Chat" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="c3e-YE-c3D" customClass="ChatViewController" customModule="UnHindr" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="X2L-r9-32Z">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Top Menu Chat" translatesAutoresizingMaskIntoConstraints="NO" id="b1c-RX-wHp">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOR-XI-hjd">
                                <rect key="frame" x="142.66666666666666" y="67" width="90" height="48"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sxe-8H-A16">
                                <rect key="frame" x="20" y="45" width="70" height="70"/>
                                <state key="normal" image="Nav Back button"/>
                                <connections>
                                    <action selector="homeButtonTapped:" destination="c3e-YE-c3D" eventType="touchUpInside" id="vPP-9p-5my"/>
                                </connections>
                            </button>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ChatBoxBG" translatesAutoresizingMaskIntoConstraints="NO" id="Tcn-ib-vCd">
                                <rect key="frame" x="-5" y="672" width="385" height="146"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write a message..." textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BQc-4U-AjD" userLabel="Message Text Field">
                                <rect key="frame" x="20" y="692" width="213" height="90"/>
                                <accessibility key="accessibilityConfiguration" label="Message Text Field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="90" id="o0J-m5-zdP"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAf-ce-78f" userLabel="Send Button">
                                <rect key="frame" x="253" y="692" width="102" height="90"/>
                                <accessibility key="accessibilityConfiguration" label="Send Button"/>
                                <state key="normal" image="Send Button"/>
                                <connections>
                                    <action selector="sendPressed:" destination="c3e-YE-c3D" eventType="touchUpInside" id="6Ok-ta-gy2"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="B7Q-iE-kSS">
                                <rect key="frame" x="0.0" y="120" width="375" height="552"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="b1c-RX-wHp" firstAttribute="leading" secondItem="gbg-B1-Q4k" secondAttribute="leading" id="AfX-b7-Hxs"/>
                            <constraint firstItem="b1c-RX-wHp" firstAttribute="top" secondItem="X2L-r9-32Z" secondAttribute="top" id="D3V-Hr-lXZ"/>
                            <constraint firstAttribute="bottom" secondItem="Tcn-ib-vCd" secondAttribute="bottom" constant="-6" id="G6i-x7-WYh"/>
                            <constraint firstItem="QOR-XI-hjd" firstAttribute="centerX" secondItem="X2L-r9-32Z" secondAttribute="centerX" id="Jpv-H0-qkg"/>
                            <constraint firstItem="BQc-4U-AjD" firstAttribute="top" secondItem="Tcn-ib-vCd" secondAttribute="top" constant="20" id="Utb-Fp-gkp"/>
                            <constraint firstItem="gbg-B1-Q4k" firstAttribute="trailing" secondItem="xAf-ce-78f" secondAttribute="trailing" constant="20" id="VQ9-DI-jM7"/>
                            <constraint firstItem="B7Q-iE-kSS" firstAttribute="trailing" secondItem="gbg-B1-Q4k" secondAttribute="trailing" id="WRR-ZV-eaO"/>
                            <constraint firstItem="B7Q-iE-kSS" firstAttribute="leading" secondItem="gbg-B1-Q4k" secondAttribute="leading" id="XCP-c9-ZdM"/>
                            <constraint firstAttribute="bottom" secondItem="xAf-ce-78f" secondAttribute="bottom" constant="30" id="Xgz-D8-CiX"/>
                            <constraint firstAttribute="trailing" secondItem="Tcn-ib-vCd" secondAttribute="trailing" constant="-5" id="dvA-Ro-N1Q"/>
                            <constraint firstItem="BQc-4U-AjD" firstAttribute="leading" secondItem="gbg-B1-Q4k" secondAttribute="leading" constant="20" id="fvE-qJ-Kez"/>
                            <constraint firstItem="Tcn-ib-vCd" firstAttribute="top" secondItem="B7Q-iE-kSS" secondAttribute="bottom" id="hUS-N3-xJF"/>
                            <constraint firstItem="xAf-ce-78f" firstAttribute="leading" secondItem="BQc-4U-AjD" secondAttribute="trailing" constant="20" id="i0r-V7-RCa"/>
                            <constraint firstItem="B7Q-iE-kSS" firstAttribute="top" secondItem="b1c-RX-wHp" secondAttribute="bottom" id="lMd-x7-VLm"/>
                            <constraint firstItem="b1c-RX-wHp" firstAttribute="trailing" secondItem="gbg-B1-Q4k" secondAttribute="trailing" id="mMX-H0-Her"/>
                            <constraint firstItem="sxe-8H-A16" firstAttribute="leading" secondItem="gbg-B1-Q4k" secondAttribute="leading" constant="20" id="oUL-EQ-igj"/>
                            <constraint firstItem="Tcn-ib-vCd" firstAttribute="leading" secondItem="X2L-r9-32Z" secondAttribute="leading" constant="-5" id="sZs-Fv-CV7"/>
                            <constraint firstItem="xAf-ce-78f" firstAttribute="top" secondItem="Tcn-ib-vCd" secondAttribute="top" constant="20" id="swH-Mz-z6f"/>
                            <constraint firstItem="sxe-8H-A16" firstAttribute="bottom" secondItem="b1c-RX-wHp" secondAttribute="bottom" constant="-5" id="vVo-b0-Xbh"/>
                            <constraint firstItem="QOR-XI-hjd" firstAttribute="bottom" secondItem="b1c-RX-wHp" secondAttribute="bottom" constant="-5" id="wO4-8W-4na"/>
                            <constraint firstAttribute="bottom" secondItem="BQc-4U-AjD" secondAttribute="bottom" constant="30" id="x3d-e9-veM"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="gbg-B1-Q4k"/>
                    </view>
                    <connections>
                        <outlet property="messageTextField" destination="BQc-4U-AjD" id="hfu-pu-GBT"/>
                        <outlet property="tableView" destination="B7Q-iE-kSS" id="eXm-1X-XhD"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="w7U-e7-cc2" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="95.652173913043484" y="172.76785714285714"/>
        </scene>
    </scenes>
    <resources>
        <image name="ChatBoxBG" width="422" height="156"/>
        <image name="Nav Back button" width="70" height="70"/>
        <image name="Send Button" width="102" height="99"/>
        <image name="Top Menu Chat" width="414" height="120"/>
    </resources>
</document>
